--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules/
 /.pnp
 .pnp.js
+.env
 
 # testing
 /coverage
@@ -36,3 +37,5 @@ yarn-error.log*
 # serverless
 .serverless
 .serverless_nextjs
+# Local Netlify folder
+.netlify
