--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.10",
+    "@netlify/functions": "^0.7.2",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.17.1",
+    "@types/node": "^14.17.14",
+    "apollo-boost": "^0.4.9",
     "autoprefixer": "^10.3.4",
+    "cross-fetch": "^3.1.4",
+    "dotenv": "^10.0.0",
+    "gql": "^1.1.2",
+    "graphql": "^15.5.3",
+    "graphql-tag": "^2.12.5",
+    "netlify-identity-widget": "^1.9.2",
     "next": "^11.1.2",
     "postcss": "^8.3.6",
     "react": "^17.0.2",
@@ -18,6 +28,7 @@
     "react-icons": "^4.2.0",
     "react-toastify": "^8.0.2",
     "tailwindcss": "^2.2.9",
+    "typescript": "^4.4.2",
     "uuid": "^8.3.2"
   }
 }
