--- a/functions/store/package.json
+++ b/functions/store/package.json
@@ -2,7 +2,7 @@
   "name": "store",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "store.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
