--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^1.17.1",
     "@types/node": "^14.17.14",
     "apollo-boost": "^0.4.9",
+    "apollo-server-lambda": "^2.25.2",
     "autoprefixer": "^10.3.4",
     "cross-fetch": "^3.1.4",
     "dotenv": "^10.0.0",
