--- a/package.json
+++ b/package.json
@@ -14,15 +14,22 @@
     "@stripe/stripe-js": "^1.17.1",
     "@types/node": "^14.17.14",
     "apollo-boost": "^0.4.9",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
     "apollo-server-lambda": "^2.25.2",
     "autoprefixer": "^10.3.4",
+    "axios": "^0.21.4",
     "cross-fetch": "^3.1.4",
     "dotenv": "^10.0.0",
+    "faunadb": "^4.4.1",
     "gql": "^1.1.2",
     "graphql": "^15.5.3",
     "graphql-tag": "^2.12.5",
+    "graphql-tools": "^4.0.8",
     "netlify-identity-widget": "^1.9.2",
+    "netlify-lambda": "^2.0.14",
     "next": "^11.1.2",
+    "node-fetch": "^2.6.2",
     "postcss": "^8.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
