--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cross-fetch": "^3.1.4",
     "dotenv": "^10.0.0",
     "faunadb": "^4.4.1",
+    "formik": "^2.2.9",
     "gql": "^1.1.2",
     "graphql": "^15.5.3",
     "graphql-tag": "^2.12.5",
