--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "apollo-server-lambda": "^2.25.2",
     "autoprefixer": "^10.3.4",
     "axios": "^0.21.4",
+    "cloudinary-react": "^1.7.0",
     "cross-fetch": "^3.1.4",
     "dotenv": "^10.0.0",
     "faunadb": "^4.4.1",
